# qwen3-asr.cpp

./: .gitignore  CMakeLists.txt  README.md
configs/: qwen3-asr-0.6b.json  qwen3-forced-aligner-0.6b.json
docs/: mel_preprocessing.md  usage.md
scripts/: convert_hf_to_gguf.py  requirements.txt
src/: audio_encoder.cpp  audio_encoder.h  audio_injection.cpp  audio_injection.h  forced_aligner.cpp  forced_aligner.h  gguf_loader.cpp  gguf_loader.h  main.cpp  mel_spectrogram.cpp  mel_spectrogram.h  qwen3_asr.cpp  qwen3_asr.h  text_decoder.cpp  text_decoder.h  timing.h
tests/: compare.py  compute_wer.py  generate_decoder_reference.py  generate_reference.py  requirements.txt  run_all_tests.sh  test_attention_compare.cpp  test_conv1.cpp  test_conv2d.cpp  test_conv_no_chunk.cpp  test_conv_only.cpp  test_decoder.cpp  test_decoder_50.cpp  test_decoder_debug.cpp  test_decoder_last_pos.cpp  test_decoder_lengths.cpp  test_decoder_no_audio.cpp  test_decoder_simple.cpp  test_decoder_trace.cpp  test_decoder_with_audio.cpp  test_embedding.cpp  test_encoder.cpp  test_encoder_no_chunk.cpp  test_injection.cpp  test_kernel_load.cpp  test_mel.cpp  test_mel_load.cpp  test_qk_compare.cpp
